# Data/Entities/Enums/Category.cs
@@ -1,0 +1,12 @@
+﻿namespace Data.Entities.Enums;
+
+public enum Category
+{
+    Starter,
+    Beverage,
+    Main,
+    Lunch,
+    Salad,
+    Side,
+    Dessert
+}
