# Data/Entities/Enums/EffortLevel.cs
@@ -1,0 +1,8 @@
+﻿namespace Data.Entities.Enums;
+
+public enum EffortLevel
+{
+    Low,
+    Medium,
+    High
+}
