# DataContracts/Recipes/CreateRecipeRequest.cs
@@ -1,0 +1,5 @@
+﻿using DataContracts.Common.Enums;
+
+namespace DataContracts.Recipes;
+
+public sealed record CreateRecipeRequest(string Name, Category Category, EffortLevel EffortLevel);
