# DataContracts/Recipes/CreateRecipeResponse.cs
@@ -1,0 +1,3 @@
+﻿namespace DataContracts.Recipes;
+
+public sealed record CreateRecipeResponse(Guid Id);
