# DataContracts/Recipes/GetRecipesResponse.cs
@@ -1,0 +1,8 @@
+﻿using DataContracts.Common;
+
+namespace DataContracts.Recipes;
+
+public record GetRecipesResponse
+{
+    public required Recipe[] Recipes { get; init; }
+}
